# BinaryAlertv2

./: .gitignore  Dockerfile  README.rst  app.py  binary_alert_stack.py  cdk.json  pyproject.toml  requirements.txt
lambda_functions/analyzer/: main.py  yara_analyzer.py
