[tool.poetry]
name = "binaryalert"
version = "3.0.0"
description = "Serverless, real-time YARA scanning on AWS"
authors = ["Airbnb Security <binaryalert-security@airbnb.com>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"
yara-python = "^4.5.0"
aws-lambda-powertools = "^2.30.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pylint = "^3.0.0"
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
boto3-stubs = {extras = ["essential"], version = "^1.34.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
